syntax = "proto3";

option go_package = "/options";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
    MethodOptions method = 50000;
}

message GqlInput {
  string param = 50031;
  string type = 50032;
  bool optional = 50033;
  bool primitive = 50034;
  bool array = 50035;
  bool empty = 50036;
}

message MethodOptions {
  string kind = 50001;
  string target = 50002; // e.g., "internal". "*" for all
  GqlInput gql_input = 50003;
  string gql_output = 50004;
  bool skip = 50005;
}

extend google.protobuf.MessageOptions {
  bool skip = 50011;
}

extend google.protobuf.FieldOptions {
  optional bool required = 50021;
  optional bool keep_case = 50022;
}